[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/textures/environment/pause-button.png" type="Texture" id=1]
[ext_resource path="res://src/levels/Level01.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/levels/UI.gd" type="Script" id=3]
[ext_resource path="res://src/levels/LevelManager.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/KitschyRetroRegular-9YnqB.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/textures/button.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/menu.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=6]

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 5 )

[node name="LevelManager" type="Node"]
script = ExtResource( 4 )
level = ExtResource( 2 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="MenuButton" type="TextureButton" parent="UI"]
margin_left = 952.0
margin_top = 12.0
margin_right = 995.0
margin_bottom = 54.0
texture_normal = ExtResource( 1 )
expand = true

[node name="Menus" type="Control" parent="UI"]

[node name="PausePopup" type="PopupMenu" parent="UI/Menus"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -120.0
margin_right = 120.0
margin_bottom = 120.0

[node name="Sprite" type="Sprite" parent="UI/Menus/PausePopup"]
position = Vector2( 120, 120 )
texture = ExtResource( 7 )

[node name="Restart" type="TextureButton" parent="UI/Menus/PausePopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = 10.5
margin_right = 126.0
margin_bottom = 73.5
rect_pivot_offset = Vector2( 94, 20.5 )
texture_normal = ExtResource( 6 )

[node name="Label" type="Label" parent="UI/Menus/PausePopup/Restart"]
margin_left = 95.0
margin_top = 25.5
margin_right = 152.0
margin_bottom = 39.5
custom_colors/font_color = Color( 0.92549, 0.85098, 0.25098, 1 )
custom_fonts/font = SubResource( 5 )
text = "Restart"

[node name="Resume" type="TextureButton" parent="UI/Menus/PausePopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -44.5
margin_right = 125.0
margin_bottom = 18.5
rect_pivot_offset = Vector2( 94, 20.5 )
texture_normal = ExtResource( 6 )

[node name="Label" type="Label" parent="UI/Menus/PausePopup/Resume"]
margin_left = 97.0
margin_top = 26.5
margin_right = 148.0
margin_bottom = 40.5
custom_colors/font_color = Color( 0.92549, 0.85098, 0.25098, 1 )
custom_fonts/font = SubResource( 5 )
text = "Resume"

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Menus/PausePopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -89.0
margin_right = 38.0
margin_bottom = -56.0
theme = SubResource( 6 )
custom_colors/default_color = Color( 0.92549, 0.85098, 0.25098, 1 )
custom_fonts/normal_font = SubResource( 7 )
text = "Paused"

[node name="DefeatPopup" type="PopupMenu" parent="UI/Menus"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -120.0
margin_right = 120.0
margin_bottom = 120.0

[node name="Sprite" type="Sprite" parent="UI/Menus/DefeatPopup"]
position = Vector2( 120, 119 )
texture = ExtResource( 7 )

[node name="Restart" type="TextureButton" parent="UI/Menus/DefeatPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -42.0
margin_right = 126.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 94, 20.5 )
texture_normal = ExtResource( 6 )

[node name="Label" type="Label" parent="UI/Menus/DefeatPopup/Restart"]
margin_left = 98.0
margin_top = 25.5
margin_right = 155.0
margin_bottom = 39.5
custom_colors/font_color = Color( 0.92549, 0.85098, 0.25098, 1 )
custom_fonts/font = SubResource( 5 )
text = "Restart"

[node name="Exit" type="TextureButton" parent="UI/Menus/DefeatPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = 13.0
margin_right = 126.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( 94, 20.5 )
texture_normal = ExtResource( 6 )

[node name="Label" type="Label" parent="UI/Menus/DefeatPopup/Exit"]
margin_left = 97.0
margin_top = 23.5
margin_right = 154.0
margin_bottom = 37.5
custom_colors/font_color = Color( 0.92549, 0.85098, 0.25098, 1 )
custom_fonts/font = SubResource( 5 )
text = "Exit"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Menus/DefeatPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -89.0
margin_right = 36.0
margin_bottom = -56.0
custom_colors/default_color = Color( 0.92549, 0.85098, 0.25098, 1 )
custom_fonts/normal_font = SubResource( 7 )
text = "Defeat"

[node name="VictoryPopup" type="PopupMenu" parent="UI/Menus"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -120.0
margin_right = 120.0
margin_bottom = 120.0

[node name="Sprite" type="Sprite" parent="UI/Menus/VictoryPopup"]
position = Vector2( 120, 119 )
texture = ExtResource( 7 )

[node name="Next" type="TextureButton" parent="UI/Menus/VictoryPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -41.0
margin_right = 126.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 94, 20.5 )
texture_normal = ExtResource( 6 )

[node name="Label" type="Label" parent="UI/Menus/VictoryPopup/Next"]
margin_left = 98.0
margin_top = 25.5
margin_right = 155.0
margin_bottom = 39.5
custom_colors/font_color = Color( 0.92549, 0.85098, 0.25098, 1 )
custom_fonts/font = SubResource( 5 )
text = "Restart"

[node name="Exit" type="TextureButton" parent="UI/Menus/VictoryPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = 13.0
margin_right = 126.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( 94, 20.5 )
texture_normal = ExtResource( 6 )

[node name="Label" type="Label" parent="UI/Menus/VictoryPopup/Exit"]
margin_left = 98.0
margin_top = 25.5
margin_right = 155.0
margin_bottom = 39.5
custom_colors/font_color = Color( 0.92549, 0.85098, 0.25098, 1 )
custom_fonts/font = SubResource( 5 )
text = "Restart"

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Menus/VictoryPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.0
margin_top = -89.0
margin_right = 40.0
margin_bottom = -56.0
custom_colors/default_color = Color( 0.92549, 0.85098, 0.25098, 1 )
custom_fonts/normal_font = SubResource( 7 )
text = "Victory"

[node name="CurrentLevelContainer" type="Node" parent="."]

[connection signal="exit" from="UI" to="." method="_on_UI_exit"]
[connection signal="restart_level" from="UI" to="." method="_on_UI_restart_level"]
[connection signal="pressed" from="UI/MenuButton" to="UI" method="_on_MenuButton_pressed"]
[connection signal="pressed" from="UI/Menus/PausePopup/Restart" to="UI" method="_on_Restart_pressed"]
[connection signal="pressed" from="UI/Menus/PausePopup/Resume" to="UI" method="_on_Resume_pressed"]
[connection signal="pressed" from="UI/Menus/DefeatPopup/Restart" to="UI" method="_on_Restart_pressed"]
[connection signal="pressed" from="UI/Menus/DefeatPopup/Exit" to="UI" method="_on_Exit_pressed"]
[connection signal="pressed" from="UI/Menus/VictoryPopup/Next" to="UI" method="_on_Next_pressed"]
[connection signal="pressed" from="UI/Menus/VictoryPopup/Exit" to="UI" method="_on_Exit_pressed"]
